--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,18 @@ body {
 }
 
 .profile-img, .mini-profile-img {
-    width: 100px; /* Fixed width to maintain layout consistency */
-    height: 100px; /* Maintains aspect ratio */
+    width: 150px; /* Fixed width to maintain layout consistency */
+    height: 150px; /* Maintains aspect ratio */
     border-radius: 50%;
     border: 3px solid #fff;
     margin-bottom: 10px;
 }
 
 .mini-profile-img {
-    border-radius: 50%; /* Circular shape */
+    width: 100px; /* Fixed width to maintain layout consistency */
+    height: 100px; /* Maintains aspect ratio */
+    border-radius: 20%; /* Circular shape */
+    border: 2px solid #fff;
     display: block; /* Alters display for better control */
     margin: auto; /* Centers image within its container */
 }
