--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    border: 3px solid #fff;
+    border: 3px solid #000;
     margin-bottom: 10px;
 }
 
