--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     width: 100px;
     height: 100px;
     border-radius: 20%;
-    border: 2px solid #fff;
+    border: 2px solid #000;
     margin: auto;
     display: block;
 }
