--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    border: 3px solid #000;
+    border: 3px solid #fff;
     margin-bottom: 10px;
 }
 
@@ -33,7 +33,7 @@ body {
     width: 100px;
     height: 100px;
     border-radius: 20%;
-    border: 2px solid #000;
+    border: 2px solid #fff;
     margin: auto;
     display: block;
 }
