--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,20 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #333;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-}
-
-.bio-container, .mini-bio-container {
-    background-color: #444;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    text-align: center;
-    width: 90%;
-    margin-top: 20px;
-    max-width: 600px;
-}
-
-.profile-img, .mini-profile-img {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    border: 3px solid #fff;
-    margin-bottom: 10px;
-}
-
-.mini-profile-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 20%;
-    border: 2px solid #fff;
-    margin: auto;
-    display: block;
-}
-
 .mini-bio-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: left;
     margin-bottom: 20px;
-}
-
-.mini-bio-container div {
-    width: 100%;
-}
-
-.mini-bio-container h3, .mini-bio-container p {
-    text-align: justify;
-    font-size: 14px;
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-
-.bio-text p, .mini-bio-container p {
-    hyphens: auto;
-    margin: 10px 0;
+    position: relative; /* Allows positioning elements within the container */
+    padding-bottom: 50px; /* Add space to accommodate the links at the bottom */
 }
 
 .links {
     width: 100%;
     text-align: center;
-    margin-top: auto;
+    position: absolute; /* Position the links at the bottom of the container */
+    bottom: 10px; /* Distance from the bottom edge */
+    left: 0;
+    right: 0;
     padding-top: 10px;
 }
 
@@ -73,7 +22,7 @@ body {
     display: block;
     text-decoration: none;
     color: #aaa;
-    font-size: 14px; /* Adjusted font size */
+    font-size: 14px;
     margin: 0 auto 10px;
 }
 
@@ -82,16 +31,16 @@ body {
     color: #ddd;
 }
 
-.section-header {
-    margin-top: 20px; /* Reduce this value or set it to 0 */
-    margin-bottom: 0px; /* Reduce this value or set it to 0 */
-}
-
-
 @media (min-width: 768px) {
     .mini-bio-container {
         flex-direction: row;
         align-items: start;
+        padding-bottom: 0; /* Reset padding for larger screens */
+    }
+
+    .links {
+        position: static; /* Revert to normal flow for larger screens */
+        padding-top: 10px;
     }
 
     .mini-profile-img {
@@ -100,10 +49,5 @@ body {
 
     .mini-bio-container div {
         width: 80%;
-    }
-
-    .links a {
-        display: inline;
-        margin-right: 0px;
     }
 }
