--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,18 @@
     align-items: center;
     text-align: left;
     margin-bottom: 20px;
-    position: relative; /* Allows positioning elements within the container */
-    padding-bottom: 50px; /* Add space to accommodate the links at the bottom */
+    width: 100%;
+}
+
+.mini-bio-container > div {
+    width: 100%;
+    margin-bottom: 10px; /* Adds spacing between text content and links */
 }
 
 .links {
     width: 100%;
     text-align: center;
-    position: absolute; /* Position the links at the bottom of the container */
-    bottom: 10px; /* Distance from the bottom edge */
-    left: 0;
-    right: 0;
-    padding-top: 10px;
+    margin-top: 10px; /* Adds spacing above links */
 }
 
 .links a {
@@ -23,7 +23,7 @@
     text-decoration: none;
     color: #aaa;
     font-size: 14px;
-    margin: 0 auto 10px;
+    margin: 5px 0; /* Adds spacing between links */
 }
 
 .links a:hover {
@@ -34,20 +34,18 @@
 @media (min-width: 768px) {
     .mini-bio-container {
         flex-direction: row;
-        align-items: start;
-        padding-bottom: 0; /* Reset padding for larger screens */
-    }
-
-    .links {
-        position: static; /* Revert to normal flow for larger screens */
-        padding-top: 10px;
+        align-items: flex-start;
     }
 
     .mini-profile-img {
         margin-right: 20px;
     }
 
-    .mini-bio-container div {
+    .mini-bio-container > div {
         width: 80%;
+    }
+
+    .links {
+        margin-top: 0; /* Reset margin for larger screens */
     }
 }
