--- a/styles.css
+++ b/styles.css
@@ -29,32 +29,52 @@ body {
     margin-bottom: 10px;
 }
 
+.mini-profile-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+    border: 2px solid #fff;
+    margin: auto;
+    display: block;
+}
+
 .mini-bio-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: left;
     margin-bottom: 20px;
+}
+
+.mini-bio-container div {
     width: 100%;
 }
 
-.mini-bio-container > div {
-    width: 100%;
-    margin-bottom: 10px; /* Adds spacing between text content and links */
+.mini-bio-container h3, .mini-bio-container p {
+    text-align: justify;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.bio-text p, .mini-bio-container p {
+    hyphens: auto;
+    margin: 10px 0;
 }
 
 .links {
     width: 100%;
     text-align: center;
-    margin-top: 10px; /* Adds spacing above links */
+    margin-top: auto;
+    padding-top: 10px;
 }
 
 .links a {
     display: block;
     text-decoration: none;
     color: #aaa;
-    font-size: 14px;
-    margin: 5px 0; /* Adds spacing between links */
+    font-size: 14px; /* Adjusted font size */
+    margin: 0 auto 10px;
 }
 
 .links a:hover {
@@ -62,21 +82,28 @@ body {
     color: #ddd;
 }
 
+.section-header {
+    margin-top: 20px; /* Reduce this value or set it to 0 */
+    margin-bottom: 0px; /* Reduce this value or set it to 0 */
+}
+
+
 @media (min-width: 768px) {
     .mini-bio-container {
         flex-direction: row;
-        align-items: flex-start;
+        align-items: start;
     }
 
     .mini-profile-img {
         margin-right: 20px;
     }
 
-    .mini-bio-container > div {
+    .mini-bio-container div {
         width: 80%;
     }
 
-    .links {
-        margin-top: 0; /* Reset margin for larger screens */
+    .links a {
+        display: inline;
+        margin-right: 0px;
     }
 }
